--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "amqplib": "^0.10.3",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
@@ -77,4 +78,4 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
-} 
+}
