--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,69 @@
+# Dependencies
 node_modules/
+package-lock.json
+yarn.lock
+
+# Build output
 dist/
+build/
+*.tsbuildinfo
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+*.temp
+.temp/
+tmp/
+temp/
+
+# NestJS specific
+.nest/
+.nest-cli.json
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# RabbitMQ
+*.pid
+*.pid.lock
+
+# SSL certificates
+*.pem
+*.key
+*.crt
+*.csr
+*.srl
+
+# Documentation
+docs/
+*.md
+!README.md
+
+# Misc
+.cache/
+.npm/
+.eslintcache
+.prettiercache 
