--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/opossum": "^8.1.8",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
