--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "opossum": "^8.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
