--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,13 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@app/shared": [
+        "../libs/shared/src"
+    ],
+    "@app/shared/*": [
+        "../libs/shared/src/*"
+    ]
     }
   }
 } 
